--- a/src/styles/Tray.css
+++ b/src/styles/Tray.css
@@ -1,37 +1,35 @@
-
-#tray
-{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 80vh;
+#tray {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 77vh;
 }
 
-#sortingButton
-{
-    
-    padding : 2vh;
-    background-color: rgb(0, 122, 43);
-    color : white;
-    border: transparent;
-   border-radius: 20%;
-   width: 20vh;
-   display: flex;
-   justify-content: center;
-
-    
+#sortingButton {
+  padding: 2vh;
+  background-color: rgb(0, 122, 43);
+  color: white;
+  border: transparent;
+  border-radius: 5px;
+  width: 65vh;
+  margin: 20px auto 0 auto;
+  font-size: 15px;
+  
+  
+}
+.trayContent{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+#sortingButton:hover {
+  background-color: rgb(0, 109, 38);
+  cursor: pointer;
 }
 
-#sortingButton:hover
-{
-    opacity: 70%;
+.screen {
+  position: relative;
+  height: 70%;
+  width: 80%;
+  background-color: rgb(234, 234, 234);
 }
-
-.screen
-{
-    position: relative;
-    height : 70%;
-    width: 80%;
-    background-color: rgb(234, 234, 234);
-}
-
